# templates-rs

./: LICENSE  README.md
cli-rs/: .gitignore  Cargo.toml  cargo-generate.toml  pre-script.rhai
cli-rs/conf/: defaults.yml
cli-rs/src/: cfg.rs  command.rs  constants.rs  error.rs  lib.rs  main.rs
cli-rs/src/ctx_example/: cmd.rs  example.rs  first.rs  mod.rs  second.rs
service-rs/: Cargo.toml  cargo-generate.toml  pre-script.rhai
service-rs/conf/: defaults.yml
service-rs/src/: cfg.rs  lib.rs
service-rs/src/ctx_example/: mod.rs  service.rs
