[package]
name = "{{crate_name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
description = "{{project-name}}, a command line example application"
license = "{{license}}"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
{%- if async != "none" %}
async-trait = "0.1.68"
{%- endif %}
{%- if crate_type == "bin" %}
clap = "3.1" # parse command line options
{%- endif %}
config = "0.12" # parse config file
env_logger = "0.9" # log implementation
log = "0.4" # logging facade
thiserror = "1" # error support
{%- if async == "tokio" %}
tokio = { version = "1", features = ["macros", "sync", "rt-multi-thread"] } # async runtime
{%- endif %}
{%- if async == "async_std" %}
async-std = { version = "1", features = ["attributes"] } # async runtime
{%- endif %}
{% if crate_type == "bin" %}
[[bin]]
path = "src/main.rs"
name = "{{crate_name}}"
{% endif %}
