[package]
name = "{{crate_name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
description = "{{project-name}}, a command line example application"
license = "{{license}}"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
{%- if runtime == "async_std" %}
async-std = { version = "1.12", features = ["attributes"] } # async runtime
{%- endif %}
{%- if runtime != "none" %}
async-trait = "0.1"
{%- endif %}
{%- if crate_type == "bin" %}
clap = "4.3" # parse command line options
{%- endif %}
config = "0.13" # parse config file
env_logger = "0.10" # log implementation
log = "0.4" # logging facade
thiserror = "1.0" # error support
{%- if runtime == "tokio" %}
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread"] } # async runtime
{%- endif %}
{% if crate_type == "bin" %}
[[bin]]
path = "src/main.rs"
name = "{{crate_name}}"
{% endif %}
